--- a/_posts/2017-07-19-UML.md
+++ b/_posts/2017-07-19-UML.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "UML Class Diagram 정리하기"
+title: "Class Diagram 정리하기"
 image: '/assets/img/'
 description: 'Class Diagram 리뷰'
 tags:
