--- a/_posts/2017-08-01-Node-NPM.md
+++ b/_posts/2017-08-01-Node-NPM.md
@@ -210,21 +210,64 @@ $ npm install express -g
 
 
 ### 모듈 업데이트 방법
+
 ```
 $ npm update express
 ```
 
 ### 모듈 검색 방법
+
 ```
 $ npm search express
 ```
 
 ### 모듈 제거 방법
+
 ```
 $ npm delete express
 ```
 
 ### 중복 모듈 정리
+
 ```
 $ npm dedupe
+```
+
+### 기본 사용법
+
+```javascript
+var express = require('express');
+```
+
+### Example
+
+```javascript
+var express = require('express'); // express 모듈 사용하기 위함
+var app = express(); // express 모듈을 app이라는 변수명으로 사용
+var bodyParser = require('body-parser'); // body-parser를 bodyParser란 변수로 사용
+var router = require('./router/index');
+var passport = require('passport');
+var LocalStrategy = require('passport-local').Strategy;
+var session = require('express-session');
+var flash = require('connect-flash');
+
+
+app.listen(3000, function() {
+    console.log("start!! express server port on 3000!!");
+});
+
+app.use(express.static('public'));
+app.use(bodyParser.json()); // Json Parser
+app.use(bodyParser.urlencoded({ extended:true }));
+app.set('view engine', 'ejs');
+app.use(session({
+    secret: 'keyboard cat',
+    resave: false,
+    saveUninitialized: true
+}));
+
+app.use(passport.initialize());
+app.use(passport.session());
+app.use(flash());
+app.use(router);
 ```
