--- a/_posts/2017-10-26-GCP-IAM.md
+++ b/_posts/2017-10-26-GCP-IAM.md
@@ -22,6 +22,8 @@ categories:
 
 ![](https://cloud.google.com/iam/img/iam-overview-basics.png)
 
+> 이미지 출처 [https://cloud.google.com/iam/docs/](https://cloud.google.com/iam/docs/)
+
 구글 클라우드 서비스들로의 액세스를 편리하고 일관된 방식으로 제어하도록 해주는 솔루션으로 구글 클라우드 서비스 개별로 리소스 접근 범위를 지정하여
 해당 리소스에 대한 권한의 관리를 쉽게 할 수 있도록 해주는 서비스 입니다
 
@@ -65,6 +67,8 @@ categories:
 
 ![](https://cloud.google.com/iam/img/roles.png)
 
+> 이미지 출처 [https://cloud.google.com/iam/docs/](https://cloud.google.com/iam/docs/)
+
 ---
 
 ### 사용자 역할
@@ -78,6 +82,8 @@ categories:
 ### 리소스 관리
 
 ![](https://cloud.google.com/resource-manager/img/cloud-folders-hierarchy.png)
+
+> 이미지 출처 [https://cloud.google.com/iam/docs/](https://cloud.google.com/iam/docs/)
 
 - 폴더
     - 여러 프로젝트들을 묶어 하나로 관리
