--- a/_posts/2017-11-16-DAO-VO-DTO.md
+++ b/_posts/2017-11-16-DAO-VO-DTO.md
@@ -11,7 +11,7 @@ categories:
 ---
 
 
-## DAO vs DTO vs VO
+## DAO vs DTO(=VO) 개념 알아보기
 
 위의 단어의 뜻을 모를 수는 있는데 내용을 보면 평소에 사용하고 있던 개념일 수도 있습니다 (개인적으로 제가 그랬네요)
 
