--- a/_posts/2018-01-12-Python-1.md
+++ b/_posts/2018-01-12-Python-1.md
@@ -10,17 +10,10 @@ categories:
 ---
 
 
-# Python 문법 정리 #1
+## Python 문법 정리 #1
 
-파이썬 기본 문법 정리하기
-
-## 자료형
-
-자료형은 프로그래밍 언어에서 사용하는 데이터의 형태를 말합니다.
 
 ### 숫자
-
-
 
 #### 자료형
 
