--- a/_posts/2018-01-12-Python-1.md
+++ b/_posts/2018-01-12-Python-1.md
@@ -164,7 +164,11 @@ l
 
 연속적으로 가져오기 `[시작위치:종료위치]`
 
-시작위치를 비우면 맨 처음부터, 종료위치를 비우면 맨 마지막까지란 의미 
+시작위치를 비우면 맨 처음부터, 종료위치를 비우면 맨 마지막까지란 의미
+
+`Tip) [-1]은 마지막 위치를 반환합니다.` 
+
+---
 
 소스
 
@@ -177,6 +181,7 @@ print '---- Result ---'
 print data[0:4]
 print data[:5]
 print data[6:]
+print data[-1]
 ```
 
 결과
@@ -187,6 +192,7 @@ print data[6:]
 Hell
 Hello
 World
+d
 
 ```
 
@@ -284,5 +290,199 @@ char = 'a'
 string = "Hello"
 ```
 
+---
+
+### 리스트
+
+리스트는 여러개의 자료형을 담을수 있는 배열입니다.
+
+구조는 다음과 같이 되어 있습니다.
+
+```
+리스트명 = [요소1, 요소2, 요소3, ...]
+```
+
+소스
+
+```python
+# coding=utf-8
+
+sampleList = [1, 2, 3, 'python', 'java', 'c#']
+
+print '---- Result ---'
+print sampleList
+```
+
+결과
+
+```
+---- Result ---
+[1, 2, 3, 'python', 'java', 'c#']
+```
+
+아래와 같이 리스트 안에 리스트가 들어갈 수도 있습니다.
+
+![](https://cdn-images-1.medium.com/max/2000/1*-_MzlfG9ro3A5w6BU-Q6zw.png)
+
+소스
+
+```python
+# coding=utf-8
+
+sampleList = [1, 2, 3, [4, 5, 6]]
+
+print '---- Result ---'
+print sampleList[0]
+print sampleList[1]
+print sampleList[2]
+print sampleList[3]
+```
+
+결과
+
+```python
+---- Result ---
+1
+2
+3
+[4, 5, 6]
+```
+
+#### Quiz1) 여기서 문제 만약 `5`를 출력하고 싶으면 어떻게 해야할까요?
+
+```python
+sampleList = [1, 2, 3, [4, 5, 6]]
+```
+
+---
+
+#### Quiz2) 여기서 문제 만약 `b`를 출력하고 싶으면 어떻게 해야할까요?
+```python
+sampleList = [1, 2, 3, [4, 5, 6, ['a', 'b', 'c']]
+```
+
+---
+
+#### 리스트 연산하기
+
+리스트 역시 `+`나 `*`와 같은 연산자를 이용할 수 있습니다.
+
+소스
+
+```python
+# coding=utf-8
+
+list1 = [1, 2, 3]
+list2 = [4, 5, 6]
+
+print '---- Result ---'
+print list1 + list2
+print list1 * 2 
+```
+
+결과
+
+```
+---- Result ---
+[1, 2, 3, 4, 5, 6]
+[1, 2, 3, 1, 2, 3]
+```
+
+---
+
+#### 리스트안의 특정 값 바꾸기
+
+특정 인덱스를 불러서 값을 대입해주면 됩니다.
 
 
+소스
+
+```python
+# coding=utf-8
+
+list = [1, 2, 3]
+
+print '---- Result1 ---'
+print list
+
+list[1] = 10 # 여기서 2 -> 10으로 바꿔줌
+
+print '---- Result2 ---'
+print list
+```
+
+결과
+
+```
+---- Result1 ---
+[1, 2, 3]
+---- Result2 ---
+[1, 10, 3]
+```
+
+#### 리스트 함수
+
+| 함수 | 설명
+| :--- | :---
+| `append(추가할 값)` | 리스트에 맨 뒷부분에 `추가할 값`을 추가
+| `sort()` | 리스트 정렬
+| `index(찾을 값)` | 리스트에서 `찾을 값`의 위치를 반환
+| `insert(넣을 위치, 넣을 값)` | 리스트에 `넣을 위치`에 `넣을 값`을 넣어준다.
+| `remove(삭제할 값)` | 리스트에서 `삭제할 값`을 찾아서 삭제 (가장 먼저 나온 값)
+| `count(찾을 값)` | 리스트에 `찾을 값`이 몇 개있는지 개수를 세서 반환
+| `extend(확장할 리스트)` | 리스트에 `확장할 리스트`를 붙임
+
+---
+
+소스
+
+```python
+# coding=utf-8
+
+list = [12, 5, 3, 12]
+
+print list
+
+list.append(27)
+
+print list
+
+list.sort()
+
+print list
+
+list.sort(reverse=True)
+
+print list
+
+print list.index(12)
+
+list.insert(0, 3)
+
+print list
+
+list.remove(3)
+
+print list
+
+print list.count(12)
+
+list.extend(['p', 's', 'y'])
+
+print list
+
+```
+
+결과
+
+```
+[12, 5, 3, 12]
+[12, 5, 3, 12, 27]
+[3, 5, 12, 12, 27]
+[27, 12, 12, 5, 3]
+1
+[3, 27, 12, 12, 5, 3]
+[27, 12, 12, 5, 3]
+2
+[27, 12, 12, 5, 3, 'p', 's', 'y']
+```
