--- a/_posts/2018-01-12-Python-1.md
+++ b/_posts/2018-01-12-Python-1.md
@@ -10,21 +10,21 @@ categories:
 ---
 
 
-## Python 문법 정리 #1
+# Python 문법 정리 #1
 
 
-### 숫자
+## 숫자
 
 가장 많이 사용할 숫자에 대해서 한번 알아보겠습니다
 
-#### 자료형
+### 자료형
 
 - 정수 : 소수점 X
     - ex) 7, 10
 - 실수 : 소수짐 O
     - ex) 10.2, 87.5 등등
 
-#### 연산
+### 연산
 
 소스
 
@@ -57,7 +57,7 @@ print data1 % data2  # 나머지
 
 --- 
 
-### 문자열
+## 문자열
 
 문자열을 만들기 위해서는 `'`나 `"`로 글자를 감싸면 됩니다.
 
@@ -66,9 +66,11 @@ a = "Hello World"
 ```
 ---
 
-#### 여러 문자열들 연결하기
+### 여러 문자열들 연결하기
 
 `+`로 하면 됩니다.
+
+---
 
 소스
 
@@ -93,9 +95,11 @@ Hello World
 
 ---
 
-#### 문자열 반복하기
+### 문자열 반복하기
 
 `*`로 하면 됩니다.
+
+---
 
 소스 
 
@@ -120,7 +124,7 @@ Hello!
 ```
 
 
-#### 이스케이프 코드 정리
+### 이스케이프 코드 정리
 
 | 코드 | 설명
 | :--- | :--- 
@@ -132,12 +136,14 @@ Hello!
 
 ---
 
-#### 문자열 슬라이싱
+### 문자열 슬라이싱
 
 파이썬 내부적으로 문자열은 배열로 되어 있어서, index를 가지고 특정 자리의 문자열만
 가져올 수 있습니다.
 
 ![](https://cdn-images-1.medium.com/max/2000/1*20AxOP-hycQzAI2lrlMPQg.png)
+
+---
 
 소스
 
@@ -161,6 +167,8 @@ Hello World
 H
 l
 ```
+
+---
 
 연속적으로 가져오기 `[시작위치:종료위치]`
 
@@ -196,11 +204,13 @@ d
 
 ```
 
-#### 문자열 포맷팅
+### 문자열 포맷팅
 
 여러개의 문자를 합칠때 매번 `+`를 이용해서 하는건 불편해서 포맷팅이 제공이 됩니다
 
 바로 예제를 보시죠
+
+---
 
 소스
 
@@ -228,7 +238,7 @@ Hi Alex and Anna!
 
 ---
 
-#### 문자열 함수
+### 문자열 함수
 
 | 함수 | 설명
 | :--- | :---
@@ -242,6 +252,8 @@ Hi Alex and Anna!
 | `rstrip()` | 오른쪽 공백 지우기
 | `replace(바꿔야 할 글자, 바꿀 글자)` | 문자열 개수 세기
 | `split(구분자)` | `구분자`를 기준으로 나눈다, 없으면 공백으로 나눠서 리스트로 반환
+
+---
 
 소스
 
@@ -278,7 +290,7 @@ My favorite language is python
 
 ---
 
-#### Tip) 문자(=character)? vs 문자열(=string)?
+### Tip) 문자(=character)? vs 문자열(=string)?
 
 문자 : A, i, s             # 하나의 글자
 문자열 : ai, python, web    # 여러개의 글자
@@ -292,7 +304,7 @@ string = "Hello"
 
 ---
 
-### 리스트
+## 리스트
 
 리스트는 여러개의 자료형을 담을수 있는 배열입니다.
 
@@ -301,6 +313,8 @@ string = "Hello"
 ```
 리스트명 = [요소1, 요소2, 요소3, ...]
 ```
+
+---
 
 소스
 
@@ -320,9 +334,13 @@ print sampleList
 [1, 2, 3, 'python', 'java', 'c#']
 ```
 
+---
+
 아래와 같이 리스트 안에 리스트가 들어갈 수도 있습니다.
 
 ![](https://cdn-images-1.medium.com/max/2000/1*-_MzlfG9ro3A5w6BU-Q6zw.png)
+
+---
 
 소스
 
@@ -348,7 +366,9 @@ print sampleList[3]
 [4, 5, 6]
 ```
 
-#### Quiz1) 여기서 문제 만약 `5`를 출력하고 싶으면 어떻게 해야할까요?
+---
+
+### Quiz1) 여기서 문제 만약 `5`를 출력하고 싶으면 어떻게 해야할까요?
 
 ```python
 sampleList = [1, 2, 3, [4, 5, 6]]
@@ -356,16 +376,18 @@ sampleList = [1, 2, 3, [4, 5, 6]]
 
 ---
 
-#### Quiz2) 여기서 문제 만약 `b`를 출력하고 싶으면 어떻게 해야할까요?
+### Quiz2) 여기서 문제 만약 `b`를 출력하고 싶으면 어떻게 해야할까요?
 ```python
 sampleList = [1, 2, 3, [4, 5, 6, ['a', 'b', 'c']]
 ```
 
 ---
 
-#### 리스트 연산하기
+### 리스트 연산하기
 
 리스트 역시 `+`나 `*`와 같은 연산자를 이용할 수 있습니다.
+
+---
 
 소스
 
@@ -390,10 +412,11 @@ print list1 * 2
 
 ---
 
-#### 리스트안의 특정 값 바꾸기
+### 리스트안의 특정 값 바꾸기
 
 특정 인덱스를 불러서 값을 대입해주면 됩니다.
 
+---
 
 소스
 
@@ -420,7 +443,9 @@ print list
 [1, 10, 3]
 ```
 
-#### 리스트 함수
+---
+
+### 리스트 함수
 
 | 함수 | 설명
 | :--- | :---
