--- a/_posts/2018-01-12-Python-1.md
+++ b/_posts/2018-01-12-Python-1.md
@@ -378,7 +378,14 @@ sampleList = [1, 2, 3, [4, 5, 6]]
 
 ### Quiz2) 여기서 문제 만약 `b`를 출력하고 싶으면 어떻게 해야할까요?
 ```python
-sampleList = [1, 2, 3, [4, 5, 6, ['a', 'b', 'c']]
+sampleList = [1, 2, 3, [4, 5, 6, ['a', 'b', 'c']]]
+```
+
+---
+
+### Quiz3) 여기서 문제 만약 `bcd`를 출력하고 싶으면 어떻게 해야할까요?
+```python
+sampleList = [1, 2, 3, [4, 5, 6, ['a', 'b', 'c', 'd', 'e']]]
 ```
 
 ---
