--- a/_posts/2017-12-14-RxJava-2.md
+++ b/_posts/2017-12-14-RxJava-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: "RxJava2 정리 #2"
 image: '/assets/img/'
-description: 'RxJava2 정리 #2'
+description: '변환 연산자 ~ 조건 연산자'
 tags:
 - RxJava2
 categories:
@@ -10,7 +10,7 @@ categories:
 ---
 
 
-## RxJava2 정리 #2
+## RxJava2 정리 #2 - 변환 연산자 ~ 조건 연산자
 
 리액티브 프로그래밍이 핫하다고 해서 공부하면서 정리해봅니다. 참고 자료는 [RxJava 프로그래밍](http://www.hanbit.co.kr/store/books/look.php?p_code=B3448548347)를
 참고해서 만들었습니다. 양이 너무 많아서 나눠서 프스팅 하려고 합니다.
@@ -18,7 +18,6 @@ categories:
 이 부분에서는 변환 연산자 ~ 조건 연산자에 대한 부분을 포스팅합니다.
 
 ---
-
 
 ## 변환 연산자
 
