--- a/_posts/2018-01-12-Python-2.md
+++ b/_posts/2018-01-12-Python-2.md
@@ -514,7 +514,15 @@ while문과 같은 반복문 중에 하나로 개인적으로 if문과 더불어
 
 ```python
 for 변수 in 리스트(또는 튜플, 문자열):
-    수행할 명령어
+    수행할 명령어 # 변수 사용할때
+    ...
+```
+
+---
+
+```python
+for _ in 리스트(또는 튜플, 문자열):
+    수행할 명령어 # 변수 사용하지 않을때
     ...
 ```
 
@@ -583,6 +591,7 @@ Avg : 61
 ```python
 # coding=utf-8
 
+print range(10)
 print range(1, 10)
 print range(1, 20, 2)
 print range(20, 1, -2)
@@ -591,6 +600,7 @@ print range(20, 1, -2)
 ---
 
 ```
+[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 [1, 2, 3, 4, 5, 6, 7, 8, 9]
 [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]
 [20, 18, 16, 14, 12, 10, 8, 6, 4, 2]
@@ -598,7 +608,31 @@ print range(20, 1, -2)
 
 ---
 
-### for문에서 range() 함수 사용하기
+### for문에서 range() 함수 사용하기 #1
+
+```python
+for i in range(10):
+    print i
+```
+
+---
+
+```
+0
+1
+2
+3
+4
+5
+6
+7
+8
+9
+```
+
+---
+
+### for문에서 range() 함수 사용하기 #2
 
 ```python
 for i in range(1, 10):
