--- a/_posts/2018-01-12-Python-3.md
+++ b/_posts/2018-01-12-Python-3.md
@@ -32,7 +32,7 @@ def 함수이름(매개 변수):
 def printMyName():
     print 'Jungwoon'
 
-printMyName(
+printMyName()
 ```
 
 결과
@@ -462,7 +462,7 @@ newFile.close()
 
 만약 여러번 호출하면 그 다음 줄을 읽어옵니다 
 
-```
+```python
 # coding=utf-8
 
 newFile = open("/Users/jungwoon/PycharmProjects/Test/newFile.txt", 'r')
