--- a/_posts/2018-01-12-Python-5.md
+++ b/_posts/2018-01-12-Python-5.md
@@ -278,3 +278,76 @@ except :
 ```
 에러 발생
 ```
+
+---
+
+## PIP를 이용한 파이썬 패키지 설치
+
+![](https://www.twoscoops.co.uk/wp-content/uploads/2015/08/pip-logo.png)
+
+pip는 파이썬으로 작성된 패키지 소프트웨어를 설치 및 관리하는 패키지 관리 시스템 입니다, 기본적으로 파이썬을 설치하면 같이
+설치가 됩니다.
+
+만약 설치가 되어 있지 않으면 아래 명령어로 설치를 해줍니다.
+
+```bash
+$ curl https://bootstrap.pypa.io/get-pip.py | python
+```
+
+### 기본적인 사용법
+
+새로운 패키지 설치
+
+```python
+$ pip install 패키지명
+```
+
+예제
+
+```python
+$ pip install django
+$ pip install numpy
+$ pip install flask
+$ pip install matplotlib
+```
+
+---
+
+설치된 패키지 삭제
+
+```python
+$ pip uninstall 패키지명
+```
+
+예제
+
+```python
+$ pip uninstall django
+$ pip uninstall numpy
+$ pip uninstall flask
+$ pip uninstall matplotlib
+```
+
+---
+
+설치된 패키지 리스트 보기
+
+```
+$ pip list
+```
+
+결과
+
+![](https://cdn-images-1.medium.com/max/1200/1*ikWPo1w_oj-Ae1wAS3og2Q.png)
+
+---
+
+특정 패키지 정보 보기
+
+```
+$ pip show 패키지명
+```
+
+예제 및 결과
+
+![](https://cdn-images-1.medium.com/max/1400/1*GPwoHdJ_LWh66IcOvpuGCQ.png)
