--- a/_posts/2017-10-26-GCP-IAM.md
+++ b/_posts/2017-10-26-GCP-IAM.md
@@ -38,7 +38,7 @@ categories:
     - GCE(Google Compute Engine) 같은 어플리케이션에서 API 호출 시 사용되는 ID
     - 사용자 계정 대신 사용 -> 권한도 서비스 계정에 부여
     - Compute Engine 같은 경우는 자동으로 생성되고 이후 변경은 자유롭게 가능
-    - Google Cloud API를 사용하는 어플리케이션의 권한 제
+    - Google Cloud API를 사용하는 어플리케이션의 권한 제공
     - 어플리케이션에서는 서비스 계정의 API Key(json or p12)를 사용하여 인증
 - G Suite  도메인 : G Suite 도메인의 구성원 모두에게 권한을 부여합니다
 - Google 그룹스 : 해당 그룹의 구성원 모두에게 권한을 부여합니다
