--- a/_posts/2018-01-12-Python-1.md
+++ b/_posts/2018-01-12-Python-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #1"
 image: '/assets/img/'
-description: 'Python 문법 정리 #1'
+description: '자료형 - 숫자, 문자, 리스트'
 tags:
 - Python
 categories:
