--- a/_posts/2018-01-12-Python-2.md
+++ b/_posts/2018-01-12-Python-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #2"
 image: '/assets/img/'
-description: 'Python 문법 정리 #2'
+description: '자료형 - 튜플, 집합 자료형 / 비교 연산자, 논리 연산자, 반복문'
 tags:
 - Python
 categories:
