--- a/_posts/2018-01-12-Python-3.md
+++ b/_posts/2018-01-12-Python-3.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #3"
 image: '/assets/img/'
-description: 'Python 문법 정리 #3'
+description: '함수'
 tags:
 - Python
 categories:
