--- a/_posts/2018-01-12-Python-4.md
+++ b/_posts/2018-01-12-Python-4.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #4"
 image: '/assets/img/'
-description: 'Python 문법 정리 #4'
+description: '클래스'
 tags:
 - Python
 categories:
