--- a/_posts/2018-01-12-Python-5.md
+++ b/_posts/2018-01-12-Python-5.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #5"
 image: '/assets/img/'
-description: 'Python 문법 정리 #5'
+description: '모듈과, 패키지, 예외 처리'
 tags:
 - Python
 categories:
