--- a/_posts/2018-01-12-Python-6.md
+++ b/_posts/2018-01-12-Python-6.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python 문법 정리 #6"
 image: '/assets/img/'
-description: 'Python 문법 정리 #6'
+description: 'Python GUI - EasyGUI, TKinter'
 tags:
 - Python
 categories:
