--- a/_posts/2018-01-12-Python-6.md
+++ b/_posts/2018-01-12-Python-6.md
@@ -570,47 +570,44 @@ root.mainloop()
 - <Double-Button-3> : 마우스 오른쪽 버튼 더블 클릭
 - <Return> : 엔터가 눌러짐
 - <Key> : 키가 눌러짐
+- <Leave> : 마우스 포인터가 위젯을 떠날때
+- <Configure> : 위젯 사이즈에 변화가 있을때
 
+---
 
 #### 이벤트 오브젝트
 
 이벤트 오브젝트는 TKinter에서 지원해주는 오브젝트로 `event.동작` 의 형태로 이용합니다.
 
-지원하는 이벤트 오브젝트는 아래와 같습니다
+지원하는 이벤트 오브젝트는 아래와 같습니다 (아래보다 훨씬 더 많은 이벤트를 가지고 있지만 많이 쓰이는것만 소개하겠습니다.)
 
-- char : 키보트 이벤트에서 발생하는 문자 하나
-- keysym : 키보트 이벤트에서 발생하는 키의 심볼명
-- num : 마우스 이벤트의 버튼 번호. 왼쪽부터 1, 2, 3
-- x, y : 위젯의 죄상단으로부터의 상대적 마우스 위치
-- x_root, y_root : 화면 죄상단으로부터의 상대적 마우스 위치
+좀 더 자세한 리스트를 알고 싶으면 
+
+- char : 키보트 이벤트에서 발생하는 문자를 가져옵니다
+- x, y : 위젯의 죄상단으로부터의 상대적 마우스 좌표
+- x_root, y_root : 화면 죄상단으로부터의 상대적 마우스 절대 좌표
 - Key : 이벤트가 발생한 위젯
 
+![](https://cdn-images-1.medium.com/max/800/1*ala5Oew1gI5iLuGSyN4r_Q.png)
 
 ```python
 # coding=utf-8
 from tkinter import *
 
-
-def keyPressed(event):
-    print(event.char) # 키보드 문자하나 출력
-
 root = Tk()
 
-frame = Frame(root, width=100, height=100)
-# Key 이벤트 바인딩
-frame.bind('<Key>', keyPressed)
-frame.place(x=0, y=0)
+frame = Frame(root, width=300, height=300)
+entry = Entry(root)
+entry.pack()
 
-# 키보드 포커스를 갖게 한다
-frame.focus_set()
 
+def click(event):
+    entry.delete(0, END) # 내용을 전부 지우고
+    entry.insert(0, ('Coordinate : %d, %d' % (event.x, event.y)) ) # 내용을 추가
+
+frame.bind("<Button-1>", click) # 왼쪽 마우스 버튼 바인딩
+
+
+frame.pack()
 root.mainloop()
 ```
-
-![](https://cdn-images-1.medium.com/max/600/1*qTxM-cShXSMT2AG_X8h7Ew.png)
-
-Frame 외의 다른 위젯들이 없어서 빈 화면으로 나옵니다.
-
-![](https://cdn-images-1.medium.com/max/600/1*wDL-_QCar-w0wClrgGcX4w.png)
-
-내가 누른 키를 아래와 같이 출력하게 할 수 있습니다.
