--- a/_posts/2018-01-12-Python-6.md
+++ b/_posts/2018-01-12-Python-6.md
@@ -562,16 +562,16 @@ root.mainloop()
 여기서 지원하는 이벤트명은 아래와 같이 있습니다.
 
 
-- <Button-1> : 마우스 왼쪽 버튼 클릭
-- <Button-2> : 마우스 중간 버튼 클릭
-- <Button-3> : 마우스 오른쪽 버튼 클릭
-- <Double-Button-1> : 마우스 왼쪽 버튼 더블 클릭
-- <Double-Button-2> : 마우스 중간 버튼 더블 클릭
-- <Double-Button-3> : 마우스 오른쪽 버튼 더블 클릭
-- <Return> : 엔터가 눌러짐
-- <Key> : 키가 눌러짐
-- <Leave> : 마우스 포인터가 위젯을 떠날때
-- <Configure> : 위젯 사이즈에 변화가 있을때
+- `<Button-1>` : 마우스 왼쪽 버튼 클릭
+- `<Button-2>` : 마우스 중간 버튼 클릭
+- `<Button-3>` : 마우스 오른쪽 버튼 클릭
+- `<Double-Button-1>` : 마우스 왼쪽 버튼 더블 클릭
+- `<Double-Button-2>` : 마우스 중간 버튼 더블 클릭
+- `<Double-Button-3>` : 마우스 오른쪽 버튼 더블 클릭
+- `<Return>` : 엔터가 눌러짐
+- `<Key>` : 키가 눌러짐
+- `<Leave>` : 마우스 포인터가 위젯을 떠날때
+- `<Configure>` : 위젯 사이즈에 변화가 있을때
 
 ---
 
