--- a/_posts/2018-02-28-Dataprep.md
+++ b/_posts/2018-02-28-Dataprep.md
@@ -49,7 +49,7 @@ Google Cloud에 있는 Dataprep은 데이터를 분석하고 정리해서 시각
 2. `Datasets` : `import한 데이터`가 저장이 됩니다
 3. `Jobs` : 변경 작업을 하는 작업을 볼 수 있습니다
 
-`Create Flow`를 누릅니
+`Create Flow`를 누릅니다
 
 ![](https://cdn-images-1.medium.com/max/2000/1*Hxs80TT4dY4rB9uAA3SzXw.png)
 
