--- a/_posts/2018-03-05-PubSub.md
+++ b/_posts/2018-03-05-PubSub.md
@@ -182,6 +182,6 @@ $ gcloud pubsub subscriptions pull [구독 이름]
 ### 마무리
 
 사실 이 정도만 가지고 어디서 어떻게 써야할지 모르겠지만, 다음번 Pub/Sub 포스팅에서는 `Node.js`나 `Python`으로
-Pub/Sub에 데이터를 넣고 불러오는 예제를 통해서 해보도록 하겠습니다. 간단히 말해서 `메시지가 유실이 되면 안되는
+`Pub/Sub`에 데이터를 넣고 불러오는 예제를 통해서 해보도록 하겠습니다. 간단히 말해서 `메시지가 유실이 되면 안되는
 실시간 데이터들을 Pub/Sub으로 보내면 얘가 알아서 핸들링을 해줍니다` 이에 관련된 많은 API들이 지원되기 때문에
 Message Provider에서 Pub/Sub으로 메시지를 던지기만 하면 됩니다
