--- a/_posts/2018-04-12-Crawling-2.md
+++ b/_posts/2018-04-12-Crawling-2.md
@@ -146,3 +146,124 @@ while len(links) > 0:
     print(newArticle)
     links = getLinks(newArticle)
 ```
+
+---
+
+```
+** 재귀에 관한 경고
+파이썬은 기본적으로 재귀 호출을 1,000회로 제한합니다. 위키 피디아의 링크 네트워크는 대단히
+넓기 때문에 이 프로그램은 결국 재귀 제한에 걸려서 멈추게 됩니다. 이를 막으려면 재귀 카운터를 삽입하거나
+다른 방법을 강구해야 합니다.
+```
+
+---
+
+#### 전체 사이트 크롤링 #1 - 동일한 페이지를 중복해서 수집하지 않게 하기
+
+```python
+# coding=utf-8
+import re
+from urllib import urlopen
+from bs4 import BeautifulSoup
+
+pages = set() # 애초에 set은 중복을 허용하지 않음
+def getLinks(pageUrl):
+    global pages
+    html = urlopen("http://en.wikipedia.org" + pageUrl)
+    soup = BeautifulSoup(html, "html.parser")
+
+    for link in soup.findAll("a", href = re.compile("^(/wiki)")):
+        if 'href' in link.attrs: # 위에서 찾은 link에 href 속성이 있는지 확인
+            if link.attrs['href'] not in pages: # 새로운 페이지인지 확인
+                newPage = link.attrs['href']
+                print(newPage)
+                pages.add(newPage)
+                getLinks(newPage)
+
+
+getLinks("")
+```
+
+```
+/wiki/Wikipedia
+/wiki/Wikipedia:Protection_policy#semi
+/wiki/Predictions_of_Wikipedia%27s_end
+/wiki/File:Will_Wikipedia_exist_in_20_years-.webm
+/wiki/User:Geographyinitiative
+/wiki/Wikipedia:WikiProject_East_Asia
+/wiki/Wikipedia:WikiProject_East_Asia/About_us
+/wiki/Wikipedia:WikiProject_East_Asia/Resources
+```
+
+---
+
+### 전체 사이트 크롤링 - 위키 피디아  전체 사이트의 데이터 수집
+
+역시 가장 먼저 해야할일은 사이트의 페이지 몇 개를 살펴보며 패턴을 찾는 일입니다.
+위키 백과의 사이트는 아래와 같은 패턴이 있음을 확인할 수 있었습니다
+(`아래에서 '#' 뒤에는 'id'를 의미합니다`)
+
+- 제목은 항상 `h1` 태그 안에 있으며, 페이지당 하나만 존재합니다.
+- 바디 텍스트는 `div#bodyContent` 태그에 들어 있습니다.
+- 첫 번째 문단의 택스트만 선택하려면 `div#mw-content-text->p`만 선택합니다
+- 편집 링크는 항목 페이지에만 존재합니다. 존재한다면 `li#ca-edit -> span -> a`로 찾을 수 있습니다.
+
+
+```python
+# coding=utf-8
+import re
+from urllib import urlopen
+from bs4 import BeautifulSoup
+
+pages = set() # 애초에 set은 중복을 허용하지 않음
+def getLinks(pageUrl):
+    global pages
+    html = urlopen("http://en.wikipedia.org" + pageUrl)
+    soup = BeautifulSoup(html, "html.parser")
+
+    try:
+        print("Title : " + soup.h1.get_text())
+        print("First paragraph : " + soup.find(id='mw-content-text').findAll('p')[0].get_text())
+        print("Edit page link : " + soup.find(id='ca-edit').find('span').find('a').attrs['href'])
+    except AttributeError:
+        print("This page is mission something!")
+
+
+    for link in soup.findAll("a", href = re.compile("^(/wiki)")):
+        if 'href' in link.attrs: # 위에서 찾은 link에 href 속성이 있는지 확인
+            if link.attrs['href'] not in pages: # 새로운 페이지인지 확인
+                newPage = link.attrs['href']
+                print("--\nNew Page : "  + newPage)
+                pages.add(newPage)
+                getLinks(newPage)
+
+
+getLinks("")
+```
+
+
+```
+Title : Main Page
+First paragraph : The sinking of the RMS Titanic in the early morning of 15 April 1912, four days into the ship's maiden voyage from Southampton to New York City, was one of the deadliest peacetime maritime disasters in history, killing more than 1,500 people. The largest passenger liner in service at the time, Titanic had an estimated 2,224 people on board when she struck an iceberg in the North Atlantic. The ship had received six warnings of sea ice but was travelling at near maximum speed when the lookouts sighted the iceberg. Unable to turn quickly enough, the ship suffered a glancing blow that buckled the starboard (right) side and opened five of sixteen compartments to the sea. The disaster caused widespread outrage over the lack of lifeboats, lax regulations, and the unequal treatment of the three passenger classes during the evacuation. Inquiries recommended sweeping changes to maritime regulations, leading to the International Convention for the Safety of Life at Sea (1914), which continues to govern maritime safety. (Full article...)
+This page is mission something!
+--
+New Page : /wiki/Wikipedia
+Title : Wikipedia
+First paragraph : Wikipedia (/ˌwɪkɪˈpiːdiə/ ( listen), /ˌwɪkiˈpiːdiə/ ( listen) WIK-ih-PEE-dee-ə) is a multilingual, web-based, free-content encyclopedia project supported by the Wikimedia Foundation and based on a model of openly editable content. Wikipedia is the largest and most popular general reference work on the Internet,[3][4][5] and is named as one of the most popular websites.[6] The project is owned by the Wikimedia Foundation, a non-profit which "operates on whatever monies it receives from its annual fund drives".[7][8][9]
+This page is mission something!
+--
+New Page : /wiki/Wikipedia:Protection_policy#semi
+Title : Bad Request
+This page is mission something!
+--
+...
+```
+
+---
+
+### Quiz
+
+아래 선택된 이미지와 같은 카드가 있는 경우 내부의 이미지를 저장하는 소스를 만드세요
+
+![](https://cdn-images-1.medium.com/max/800/1*pgAymeauHo-qQzttPDPMTQ.png)
+
