--- a/_posts/2017-12-14-RxJava-1.md
+++ b/_posts/2017-12-14-RxJava-1.md
@@ -231,7 +231,7 @@ Default Value
 ### Hot Observable vs Cold Observavle
 
 - Hot Observable : 구독자가 subscribe() 함수를 구독하기 전까지는 데이터를 발행하지 않음 ex) 센서 이벤트, 입력 이벤트
-- Cold Observable : 구독자의 조냊 여부 없이 데이터를 발행 ex) 웹 요청, 데이터베이스 관련 요청
+- Cold Observable : 구독자의 존재 여부 없이 데이터를 발행 ex) 웹 요청, 데이터베이스 관련 요청
 
 ```
 Note 구독자가 여러 명이다 라는 의미
@@ -300,7 +300,7 @@ Subscriber #2 => 3
 
 #### PublishSubject 클래스
 
-오직 해당 시간에 발생한 데이터를 그대로 구닥자에게 전달 받음
+오직 해당 시간에 발생한 데이터를 그대로 구독자에게 전달 받음
 
 ```java
 PublishSubject<String> subject = PublishSubject.create();
@@ -369,7 +369,7 @@ Subscriber #2 => 3
 
 차가운 Observable을 뜨거운 Observable로 변환하며, 원 데이터 하나를 여러 구독자에게 동시에
 전달할때 사용하며, 특이한 점은 subscribe() 함수를 호출해도 아무 동작이 일어나지 않습니다 새로 추가된
-connect() 함수는 호출한 시점부터 subscribe(_ 함수를 호출한 구독자에게 데이터를 발행)
+connect() 함수는 호출한 시점부터 subscribe() 함수를 호출한 구독자에게 데이터를 발행)
 
 ```java
 
