--- a/_posts/2017-12-14-RxJava-1.md
+++ b/_posts/2017-12-14-RxJava-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "RxJava2 정리 #1"
+title: "RxJava2 정리 #1 - Observable과 기본 연산자"
 image: '/assets/img/'
 description: 'Observable과 기본 연산자'
 tags:
@@ -48,7 +48,9 @@ Observable은 Observer 패턴을 구현합니다. Observer 패턴은  객체의 
 
 인자로 넣은 데이터를 차례로 발행하려고 Observable을 생성합니다.
 
-(단 타입은 모두 같아야 합니다)
+여러개의 데이터를 넣는 경우 최대 10개
+
+(단, 타입은 모두 같아야 합니다)
 
 ```java
 
@@ -230,13 +232,19 @@ Default Value
 
 ### Hot Observable vs Cold Observavle
 
-- Hot Observable : 구독자가 subscribe() 함수를 구독하기 전까지는 데이터를 발행하지 않음 ex) 센서 이벤트, 입력 이벤트
-- Cold Observable : 구독자의 존재 여부 없이 데이터를 발행 ex) 웹 요청, 데이터베이스 관련 요청
+- Hot Observable : 구독자의 존재 여부 없이 데이터를 발행 ex) 센서 이벤트, 입력 이벤트
+- Cold Observable : 구독자가 subscribe() 함수를 구독하기 전까지는 데이터를 발행하지 않음 ex) 웹 요청, 데이터베이스 관련 요청
 
 ```
-Note 구독자가 여러 명이다 라는 의미
+** Note 구독자가 여러 명이다 라는 의미
 
 내가 최종적으로 원하는 결과 데이터가 여러 종류일 때는 각각을 구독자로 생각하면 좋습니다
+```
+
+```
+** 배압효과(Back Pressure)
+Hot Observable때 주의해야할 점인데, 데이터를 발행하는 속도와 구독자가 처리하는 속도의
+차이가 클 때 발생 합니다.
 ```
 
 ---
