--- a/_posts/2019-01-11-Docker-1.md
+++ b/_posts/2019-01-11-Docker-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Docker 정리 #1"
+title: "Docker 정리 #1 (개념 및 간단한 명령어 정리)"
 image: '/assets/img/'
 description: '개념 및 간단한 명령어 정리'
 tags:
@@ -13,6 +13,9 @@ categories:
 
 최근에 쿠버네티스를 공부할 일이 있어서 보고 있는데, 쿠버네티스 자체가 도커(Docker) 오케스트레이션을 해주는 툴이라 도커에 대한 개념이 없으니, 
 공부하기가 힘들었습니다. 그래서 이렇게 급하게 책을 사서 공부하면서 내용을 정리하고자 합니다.
+
+> 해당 내용은 위키북스에서 나온 [시작하세요! 도커](https://book.naver.com/bookdb/book_detail.nhn?bid=11884948) 책을 보면서
+정리한 내용입니다.
 
 ## 도커란?
 
