--- a/_posts/2019-01-11-Docker-1.md
+++ b/_posts/2019-01-11-Docker-1.md
@@ -35,6 +35,29 @@ categories:
 
 ---
 
+## 도커 설치
+
+다음 [Docker 공식 사이트](https://www.docker.com)에 들어갑니다.
+
+그 다음 우측 상단의 'Get Started' 버튼을 누릅니다.
+
+![](https://cdn-images-1.medium.com/max/2400/1*yoXzBl1qHTStkb0CF5hLDg.png)
+
+그럼 아래와 같은 화면이 나오는데 자신의 시스템에 맞는 버튼을 누릅니다. 저는 Mac 환경이기 때문에
+`Download for Mac`을 클릭하겠습니다.
+
+![](https://cdn-images-1.medium.com/max/2400/1*FZnCvNXsIysemWasZK22cA.png)
+
+그럼 다음과 같은 화면이 나타납니다. `Get Docker`를 눌러서 다운로드 하고 설치가까지 진행합니다.
+
+![](https://cdn-images-1.medium.com/max/2400/1*f8hxGM3Uoxrk6IKAFRdJmQ.png)
+
+설치가 완료가 되면 상단에 Docker가 나타나고 터미널에서 `docker` 명령어를 사용할 수 있게 됩니다.
+
+![](https://cdn-images-1.medium.com/max/1200/1*bEnO3dIu3q4xig7c-xFdfg.png)
+
+---
+
 ## 도커 이미지
 
 이미지는 컨테이너를 생성할 때 필요한 요소이며, 가상 머신을 생성할 때 사용하는 ISO 파일과 비슷한 개념입니다. 이미지는 도커 명령어로 다운로드가 되기 때문에
