--- a/_posts/2019-01-11-Docker-1.md
+++ b/_posts/2019-01-11-Docker-1.md
@@ -15,7 +15,7 @@ categories:
 공부하기가 힘들었습니다. 그래서 이렇게 급하게 책을 사서 공부하면서 내용을 정리하고자 합니다.
 
 > 해당 내용은 위키북스에서 나온 [시작하세요! 도커](https://book.naver.com/bookdb/book_detail.nhn?bid=11884948) 책을 보면서
-정리한 내용입니다.
+정리한 내용입니다. 책의 내용이 매우 좋아서 강추합니다.
 
 ## 도커란?
 
