--- a/_posts/2019-01-13-Docker-3.md
+++ b/_posts/2019-01-13-Docker-3.md
@@ -15,7 +15,7 @@ categories:
 공부하기가 힘들었습니다. 그래서 이렇게 급하게 책을 사서 공부하면서 내용을 정리하고자 합니다.
 
 > 해당 내용은 위키북스에서 나온 [시작하세요! 도커](https://book.naver.com/bookdb/book_detail.nhn?bid=11884948) 책을 보면서
-정리한 내용입니다.
+정리한 내용입니다. 책의 내용이 매우 좋아서 강추합니다.
 
 도커의 이미지로 컨테이너를 생성하면 이미지는 읽기 전용이라 쓰기가 불가능합니다. 그렇기에 컨테이너 계층에 변화되는 데이터들이 저장이 되는데,
 이럴 경우, 컨테이너가 삭제가 되면 그동안 저장된 운용데이터들이 함께 삭제가 됩니다. 이렇게 되면, 복구도 불가능해지기 때문에, 컨테이너의
