--- a/_posts/2019-01-14-NIO.md
+++ b/_posts/2019-01-14-NIO.md
@@ -274,7 +274,7 @@ Deleted : test2.txt
 
 버퍼가 사용하는 메모리 위치에 따라서 `다이렉트 버퍼`와 `넌 다이렉트 버퍼`로 분류할수 있습니다.
 
-| 구분 | Direct Buffer | Non DIrect Buffer
+| 구분 | Direct Buffer | Non Direct Buffer
 | :--- | :--- | :---
 | 사용 공간 | OS의 메모리 | JVM의 힙 메모리
 | 버퍼 생성 속도 | 느리다 | 빠르다
