--- a/_posts/2019-01-14-NIO.md
+++ b/_posts/2019-01-14-NIO.md
@@ -280,7 +280,7 @@ Deleted : test2.txt
 | 버퍼 생성 속도 | 느리다 | 빠르다
 | 버퍼의 크기 | 크다 | 작다
 | I/O 성능 | 높다 | 낮다
-| 적합한 케이스 | 한 번 생성해놓고 재사용시 적합 | 빈번하게 생성해야할때 적
+| 적합한 케이스 | 한 번 생성해놓고 재사용시 적합 | 빈번하게 생성해야할때 적합
 
 `다이렉트 버퍼`는 `채널을 사용`해서 버퍼의 데이터를 읽고 저장할 경우에만 `운영체제의 native I/O를 사용`합니다.
 만약 채널을 사용하지 않고 ByteBuffer의 get() / put() 메서드 사용시에는 `내부적으로 JNI를 호출`해야하기 때문에
