--- a/_posts/2019-02-26-Airflow.md
+++ b/_posts/2019-02-26-Airflow.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "우분투에 아파치 에어플로우 설치"
+title: "우분투(Ubuntu)에 아파치 에어플로우 (Apache Airflow) 설치"
 image: '/assets/img/'
 description: 'Install Apache Airflow on Ubuntu'
 tags:
