--- a/_posts/2019-02-26-Airflow.md
+++ b/_posts/2019-02-26-Airflow.md
@@ -37,7 +37,7 @@ $ sudo apt-get install postgresql postgresql-contrib -y
 $ sudo -u postgres psql
 ```
 
-여기서 유저명은 `jungwoon`으로 하고 안에서 사용할 데이터베이스 명을 `airflow`로 하겠습니다.
+여기서 유저명은 `jungwoon`으로 하고 안에서 사용할 데이터베이스 명을 `airflow`로 하겠습니다.jungwoon
 
 ```
 postgres=# create role jungwoon;
