--- a/_posts/2019-02-26-Airflow.md
+++ b/_posts/2019-02-26-Airflow.md
@@ -22,6 +22,9 @@ categories:
 $ sudo apt-get update
 $ sudo apt-get install python-pip -y
 $ sudo pip install --upgrade pip
+$ sudo apt-get install python-setuptools -y
+$ sudo apt-get install python-dev -y
+$ sudo apt-get install python-mysqldb -y
 ```
 
 `Apache Airflow`의 기본 `내장 DB`는 `SQLite`로 되어 있는데, 이 경우에는 `병렬 처리가 불가`합니다.
@@ -108,7 +111,13 @@ $ sudo SLUGIFY_USES_TEXT_UNIDECODE=yes pip install apache-airflow==1.10.0
 ```bash
 $ sudo pip install celery
 $ sudo pip install psycopg2
+$ sudo pip install mysqlclient
+$ sudo pip install psycopg2-binary
 $ sudo pip install apache-airflow['kubernetes']
+$ sudo pip install apache-airflow[celery]
+$ sudo pip install apache-airflow[rabbitmq]
+$ sudo pip install apache-airflow[mysql]
+$ sudo pip install apache-airflow[postgres]
 ```
 
 ![](https://cdn-images-1.medium.com/max/725/1*UnYL-2r54_7AnEwQv0cVxA.png)
@@ -157,7 +166,7 @@ $ sudo vi ~/airflow/airflow.cfg
 executor = CeleryExecutor
 sql_alchemy_conn = postgresql+psycopg2:///airflow
 broker_url = amqp://guest:guest@localhost:5672//
-celery_result_backend = amqp://guest:guest@localhost:5672//  # 추가 (기존에 없음)
+result_backend = amqp://guest:guest@localhost:5672//
 ```
 
 설정이 끝났으면 다시 `airflow` DB 설정을 초기화 합니다.
@@ -174,11 +183,17 @@ $ mkdir -p ~/airflow/dags
 
 이제 위의 경로에다가 만들어진 `dag` 파일을 넣고 아래 명령어로 `list` 확인을 하면 파이썬 내부의 문제들이 없으면 만들어진 `dag`가 잘 보일것입니다.
 
-```
+```bash
 $ airflow list_dags
 ```
 
 설치가 다 되었으면 아래 명령어로 `scheduler`, `worker`, `webserver`를 띄웁니다.
+
+```bash
+$ airflow scheduler -D
+$ airflow worker -D
+$ airflow webserver -p 8080 -D
+```
 
 `-D` 옵션은 데몬 형태로 띄우는 옵션이고, `-p`는 `웹 서버의 포트`를 임의로 지정한 것입니다. 저는 여기서 `8080`으로 포트 번호를 지정했습니다.
 여기까지 문제가 없었다면, 브라우저에서 아래 주소로 웹 서버를 확인할 수 있습니다.
