--- a/_posts/2019-07-05-RxJava-1.md
+++ b/_posts/2019-07-05-RxJava-1.md
@@ -248,17 +248,19 @@ Hello World
 
 
 ```java
-// 실행이 안됨
 
 Observable.just("Hello World")
-        .single("Default Value")
-        .subscribe(System.out::println);
+    .single("Default Value")
+    .subscribe { result ->
+        println(result!!)
+    }
 
 
-Observable.empty()
-        .single("Default Value")
-        .subscribe(System.out::println);
-        
+Observable.empty<String>()
+    .single("Default Value")
+    .subscribe { result ->
+        println(result!!)
+    }        
         
 //------------------------------------------
             
@@ -614,175 +616,3 @@ Observable.fromArray(*balls)
 
 ```
 
----
-
-### interval() 함수
-
-주어진 시간 간격으로 0부터 1씩 증가하는 Long 객체를 생성합니다.
-![](http://reactivex.io/documentation/operators/images/interval.c.png)
-
-`interval(period: Long, unit: TimeUnit)`  
-
-
-```java
-Observable.interval(100L, TimeUnit.MILLISECONDS)
-    .map{ (it + 1) * 100 }
-    .take(5) // 5개까지만 발행합니다.
-    .subscribe(System.out::println)
-
-// interval은 별도의 스레드에서 처리를 하기 때문에, 해당 스레드 작업이 완료될때까지 프로그램이 끝나면 안되기 때문에
-// Thread.sleep()을 통해 기다립니다.
-sleep(1000)
-
-
-//------------------------------------------
-            
-결과)
-
-100
-200
-300
-400
-500
-
-```
-
----
-
-### timer() 함수
-
-timer()는 interval()과 비슷하지만, 일정 시간이 지난 후,
-한 개의 데이터를 발행하고 onComplete() 이벤트를 발생시킵니다.
-
-![](http://reactivex.io/documentation/operators/images/timer.c.png)
-
-```java
-println(SimpleDateFormat("yyyy/MM/dd HH:mm:ss").format(Date()))
-
-// 3초뒤에 데이터 발행
-Observable.timer(3000L, TimeUnit.MILLISECONDS)
-    .map{ SimpleDateFormat("yyyy/MM/dd HH:mm:ss").format(Date()) }
-    .subscribe(System.out::println)
-
-// interval은 별도의 스레드에서 처리를 하기 때문에, 해당 스레드 작업이 완료될때까지 프로그램이 끝나면 안되기 때문에
-// Thread.sleep()을 통해 기다립니다.
-sleep(5000)
-
-//------------------------------------------
-            
-결과)
-
-2019/07/05 21:20:46
-2019/07/05 21:20:49
-
-```
-
----
-
-### range() 함수
-
-주어진 값(n) 부터 m개의 Integer 객체를 발행합니다.
-
-![](http://reactivex.io/documentation/operators/images/range.c.png)
-
-```java
-
-Observable.range(1, 10)
-    .filter { number -> number % 2 == 0 }
-    .subscribe(System.out::println)
-
-
-//------------------------------------------
-            
-결과)
-
-2
-4
-6
-8
-10
-
-```
-
----
-
-### intervalRange() 함수
-
-interval()과 range()를 합쳐놓은 함수로, interval()함수처럼 일정한 시간 간격으로 값을 출력하지만, range() 함수처럼
-시작 숫자(n)로부터 m개만큼의 값을 생성하고, onComplete 이벤트를 발생합니다, 즉 interval() 함수처럼 무한히 데이터
-흐름이 발생하지 않습니다.
-
-![](https://raw.github.com/wiki/ReactiveX/RxJava/images/rx-operators/intervalRange.s.png)
-
-
-
-```java
-Observable.intervalRange(
-    1, // start
-    5, // count
-    100L, // initialDelay
-    100L, // period
-    TimeUnit.MILLISECONDS) // TimeUnit
-        .map{ "${SimpleDateFormat("yyyy/MM/dd HH:mm:ss.SSS").format(Date())} : $it" }
-        .subscribe(System.out::println)
-        
-sleep(10000)
-
-//------------------------------------------
-            
-결과)
-
-2019/07/05 21:26:46.812 : 1
-2019/07/05 21:26:46.887 : 2
-2019/07/05 21:26:46.985 : 3
-2019/07/05 21:26:47.087 : 4
-2019/07/05 21:26:47.187 : 5
-
-```
-
----
-
-### defer() 함수
-
-timer() 함수와 비슷하지만 데이터 흐름 생성을 구독자가 subscribe() 함수를 호출할때까지 미룰 수 있습니다.
-이 때 새로운 Observable이 생성됩니다. Observable의 생성이 구독할 때까지 미뤄지기 대문에 최신 데이터를
-얻을 수 있습니다.
-
-즉 defer() 함수를 사용하면, subscribe() 함수를 호출할 때의 상황을 반영하여 데이터 흐름의 생성을 지연하는 효과를 보여줍니다.
-
-![](http://reactivex.io/documentation/operators/images/defer.c.png)
-
-
----
-
-### repeat() 함수
-
-단순히 반복 실행을 해주는 함수입니다. 서버가 살아있는지 확인할때 많이 사용합니다.
-
-![](http://reactivex.io/documentation/operators/images/repeat.c.png)
-
-```java
-val balls = arrayOf("1", "3", "5")
-
-Observable.fromArray(*balls)
-    .repeat(3)
-    .doOnComplete { println("onComplete()") }
-    .subscribe(System.out::println)
-        
-
-//------------------------------------------
-            
-결과)
-
-1
-3
-5
-1
-3
-5
-1
-3
-5
-onComplete()
-        
-```
