--- a/_posts/2019-07-05-RxJava-1.md
+++ b/_posts/2019-07-05-RxJava-1.md
@@ -67,6 +67,8 @@ Observable은 아래 세 가지의 알림을 구독자에게 전달합니다.
 
 (단, `타입은 모두 같아야 하고` 여러개의 최대 넣을 수 있는 데이터의 개수는 `10개`입니다.)
 
+![](http://reactivex.io/documentation/operators/images/just.c.png)
+
 ```java
 
 Observable.just(1, 2, 3, 4, 5)
@@ -115,6 +117,8 @@ dispose()는 Observable에게 더 이상 데이터를 발행하지 말라고 구
 RxJava의 javadoc에 다르면 create()는 RxJava에 익숙한 사용자만 활용하도록 권고합니다. 이유는 개발자가 하나하나 수동으로 잡아줘야 하는
 옵션들이 많아지기 때문입니다.
 
+![](http://reactivex.io/documentation/operators/images/create.c.png)
+
 
 ```java
 val source = Observable.create { emitter: ObservableEmitter<Int> ->
@@ -141,6 +145,8 @@ source.subscribe { println(it) }
 
 Array안의 데이터를 하나씩 발행하는 함수
 
+![](http://reactivex.io/documentation/operators/images/from.c.png)
+
 ```java
 
 val arr = arrayOf(100, 200, 300)
@@ -166,6 +172,8 @@ Iterable 인터페이스의 값을 가져오는 함수
 
 (대표적인 Iterable 클래스는 `List`, `ArrayList`, `ArrayBlockingQueue`, `HashSet`, `LinkedList`, `Stack`, `TreeSet` 등이 있습니다.)
 
+![](http://reactivex.io/documentation/operators/images/from.c.png)
+
 ```java
 
 val names = ArrayList<String>()
@@ -188,11 +196,12 @@ Bob
 ### fromCallable() 함수
 
 자바5에서 추가된 동시성 API인 Callable을 호출하기 위한 함수입니다.
-간단히 설명을 하면
+간단히 설명을 하면 아래와 같습니다.
 
 - `Runnable` : 스레드 처리 이후에 리턴값 X
 - `Callable` : 스레드 처리 이후에 리턴값 O 
 
+![](http://reactivex.io/documentation/operators/images/from.c.png)
 
 ```java
 val callable = {
@@ -217,6 +226,8 @@ Hello World
 
 Future 인터페이스도 자바5에 추가된 동시성 API로 비동기 계산에 이용합니다.
 get()메서드를 호출하면 Callable 객체에서 구현한 계산 결과가 나올때까지 블로킹 됩니다.
+
+![](http://reactivex.io/documentation/operators/images/from.c.png)
 
 ```java
 
@@ -245,7 +256,7 @@ Hello World
 
 `first()`를 호출하면 Observable 객체가 Single 객체로 변환됨 이렇게 되면 뒤에 데이터가 있어도 더 이상 발행하지 않고 `onSuccess` 를 호출합니다.
 
-
+![](http://reactivex.io/documentation/operators/images/single.p.png)
 
 ```java
 
