--- a/_posts/2019-07-05-RxJava-2.md
+++ b/_posts/2019-07-05-RxJava-2.md
@@ -28,14 +28,14 @@ categories:
 
 생성 연산자는 데이터의 흐름을 만듭니다.
 
-- interval() : 일정 시간 간격으로 데이터 흐름을 만듭니다.
-- timer() : interval() 함수와 유사하지만 일정시간이 지나고 한 번만 실행합니다. 
-- range() : 주어진 값(n) 부터 m개의 Integer 객체를 발행합니다.
-- intervalRange() : interval()과 range()를 혼합해놓은 함수로, interval() 함수처럼 일정한 시간 간격으로 값을 출력하지만
+- `interval()` : 일정 시간 간격으로 데이터 흐름을 만듭니다.
+- `timer()` : interval() 함수와 유사하지만 일정시간이 지나고 한 번만 실행합니다. 
+- `range()` : 주어진 값(n) 부터 m개의 Integer 객체를 발행합니다.
+- `intervalRange()` : interval()과 range()를 혼합해놓은 함수로, interval() 함수처럼 일정한 시간 간격으로 값을 출력하지만
 range() 함수처럼 시작 숫자(n)로부터 m개만큼의 값만 생성하고 onComplete 이벤트가 발생하기 때문에 interval() 처럼 무한히 데이터 흐름을
 발행하지 않습니다. 리턴 타입은 Long 타입입니다. 
-- defer() : defer() 함수는 timer() 함수와 비슷하지만 데이터 흐름 생성을 구독자가 subscribe() 함수를 호출할 때까지 미룰 수 있습니다.
-- repeat() : 데이터를 m만큼 반복해서 실행해 주는 함수입니다.
+- `defer()` : defer() 함수는 timer() 함수와 비슷하지만 데이터 흐름 생성을 구독자가 subscribe() 함수를 호출할 때까지 미룰 수 있습니다.
+- `repeat()` : 데이터를 m만큼 반복해서 실행해 주는 함수입니다.
 
 
 ### interval() 함수
@@ -414,10 +414,10 @@ Observable.fromArray(*balls)
 생성 연산자와 변환 연산자는 1개의 Observable(=데이터 흐름) 을 다뤘는데 여러개의 Observable을 다루는
 결합 연산자 연산자를 알아보도록 하겠습니다. 결합 연산자는 다수의 Observable을 하나로 합하는 방법을 제공합니다.
 
-- zip() : 입력 Observable에서 데이터를 모두 새로 발행했을 때 그것을 합칩니다.
-- combineLatest() : 처음에 각 Observable에서 데이터를 발행한 후에는 어디에서 값을 발행하던 최신 값으로 갱신합니다.
-- merge() : 최신 데이터 여부와 상관없이 각 Observable에서 발행하는 데이터를 그대로 출력합니다.
-- concat() : 입력된 Observable을 Observable 단위로 이어 붙여줍니다.
+- `zip()` : 입력 Observable에서 데이터를 모두 새로 발행했을 때 그것을 합칩니다.
+- `combineLatest()` : 처음에 각 Observable에서 데이터를 발행한 후에는 어디에서 값을 발행하던 최신 값으로 갱신합니다.
+- `merge()` : 최신 데이터 여부와 상관없이 각 Observable에서 발행하는 데이터를 그대로 출력합니다.
+- `concat()` : 입력된 Observable을 Observable 단위로 이어 붙여줍니다.
 
 
 ### zip() 함수
@@ -649,10 +649,10 @@ onComplete()
 
 Observable의 흐름을 제어하는 역할을 합니다.
 
-- amb() 함수 : 둘 중 어느 것이든 먼저 나오는 Observable을 채택합니다.
-- takeUntil(other) 함수 : other Observable에서 데이터가 발행하기 전까지만 현재 Observable을 채택합니다
-- skipUntil(other) 함수 : other Observable에서 데이터가 발행될때까지 현재 Observable에서 발행하는 값을 무시합니다.
-- all() 함수 : Observable에 입력되는 값이 모두 특정 조건에 맞을 때만 true를 발행합니다. 만약 조건이 맞지 않으면 false를 발행합니다.
+- `amb()` : 둘 중 어느 것이든 먼저 나오는 Observable을 채택합니다.
+- `takeUntil(other)` : other Observable에서 데이터가 발행하기 전까지만 현재 Observable을 채택합니다
+- `skipUntil(other)` : other Observable에서 데이터가 발행될때까지 현재 Observable에서 발행하는 값을 무시합니다.
+- `all()` : Observable에 입력되는 값이 모두 특정 조건에 맞을 때만 true를 발행합니다. 만약 조건이 맞지 않으면 false를 발행합니다.
 
 ---
 
