--- a/_posts/2019-07-05-RxJava-3.md
+++ b/_posts/2019-07-05-RxJava-3.md
@@ -39,8 +39,8 @@ categories:
 
 RxJava는 작업을 할 스레드와 작업결과를 보여줄 스레드를 지정할 수 있습니다.
 
-- subscribeOn() : 작업을 처리할 스레드를 지정
-- observeOn() : 작업결과를 보여줄 스레드를 지정
+- `subscribeOn()` : 작업을 처리할 스레드를 지정
+- `observeOn()` : 작업결과를 보여줄 스레드를 지정
 
 ![](http://reactivex.io/documentation/operators/images/schedulers.png)
 
