--- a/_posts/2019-07-11-Retrofit.md
+++ b/_posts/2019-07-11-Retrofit.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Retrofit 정리하기"
+title: "Retrofit2 정리하기"
 image: '/assets/img/'
-description: 'Retrofit 정리하기'
+description: 'Retrofit2 정리하기'
 tags:
 - Android
 categories:
@@ -10,7 +10,7 @@ categories:
 ---
 
 
-## Retrofit 정리하기
+## Retrofit2 정리하기
 
 Retrofit은 Square사에서 제공하는 오픈소스 라이브러리로 REST API를 안드로이드에서 쉽게 이용할 수 있게 해주는 도구 입니다. 이번 포스팅에서는
 REST API에 대한 간단한 소개와 Retrofit의 사용방법에 대해서 알아보도록 하겠습니다. 소스는 Kotlin으로 진행하도록 하겠습니다.
