--- a/_posts/2019-07-11-Retrofit.md
+++ b/_posts/2019-07-11-Retrofit.md
@@ -101,7 +101,7 @@ HTTP를 좀 더 효율적으로 사용하기 위한 아키텍처로 발표되었
 
 우선 사용하고자 하는 REST API의 요청 방식과 응답 방식이 어떤지 확인을 해야 합니다. Kakao REST API 중에 이미지 검색 부분을 보면 다음과 같이 나와있습니다.
 
-[Request]
+`[Request]`
 
 앱 키를 헤더에 담아 GET으로 요청합니다.
 
@@ -126,7 +126,9 @@ curl -v -X GET "https://dapi.kakao.com/v2/search/image" \
 -H "Authorization: KakaoAK [발급받은 앱 키]"
 ```
 
-[Response]
+---
+
+`[Response]`
 
 응답 바디는 JSON 객체로 meta와 documents로 구성됩니다.
 
@@ -177,6 +179,8 @@ Content-Type: application/json;charset=UTF-8
   ]
 }
 ```
+
+---
 
 Retrofit2는 GSON을 제공하기 때문에 응답바디와 동일하게 data class를 만들어두면 응답 바디에 있는 json을 자동으로 파싱하여 객체로 받을 수 있습니다.
 
