--- a/_posts/2019-07-05-RxJava-1.md
+++ b/_posts/2019-07-05-RxJava-1.md
@@ -49,7 +49,7 @@ RxJava2에서는 상황에 맞게 `Observable`, `Maybe`, `Flowable`로 구분해
 
 - `Observable` : `Observable`은 옵서버 패턴을 구현하여 객체의 상태 변화를 관찰하여 상태 변화가 있을때마다 상태 변화에 대해 옵서버에게 알려줍니다.
 - `Maybe` : reduce() 함수나 firstElement() 함수와 같이 데이터가 발행할 수 있거나 혹은 발행되지 않고도 완료되는 경우를 의미합니다.
-- `Floable` : 데이터가 발생하는 속도가 구독자가 처리하는 속도보다 현저하게 빠른 경우 발생하는 배압(Back Pressure) 이슈에 대응하는 기능을
+- `Flowable` : 데이터가 발생하는 속도가 구독자가 처리하는 속도보다 현저하게 빠른 경우 발생하는 배압(Back Pressure) 이슈에 대응하는 기능을
 제공합니다.
 
 Observable은 아래 세 가지의 알림을 구독자에게 전달합니다.
