--- a/_posts/2019-07-15-Activity.md
+++ b/_posts/2019-07-15-Activity.md
@@ -103,7 +103,7 @@ API 21부터 파라미터가 2개인 onSaveInstanceState()와 onRestoreInstanceS
     - 파라미터 2개 : onPause() 다음에 화면 전환같은 상황에서 액티비티가 종료된 것인지 판단하여 실행
 
 - onRestoreInstanceState
-    - 파라미터 1개 : onStart() 다음에 부조건 실행
+    - 파라미터 1개 : onStart() 다음에 무조건 실행
     - 파라미터 2개 : onStart() 다음에 Bundle이 있을때만 실행
 
 
