--- a/_posts/2019-07-05-RxJava-5.md
+++ b/_posts/2019-07-05-RxJava-5.md
@@ -279,7 +279,7 @@ source.doOnNext(System.out::println).test().awaitDone(1L, TimeUnit.SECONDS).asse
 `Flowable` 클래스는 `배압(=backpressure) 이슈`를 해결하기 위해 RxJava 2.x에서 도입된 개념입니다. `Flowable` 클래스의 도입 이유는 `Observable` 클래스의
 성능을 향상시키기 위해서 입니다. 
 
-기존의 Observable 클래스는 배압에 관한 처리가 불필요한 경우에 초기 로딩 때문에 오버헤드가 었는데 2.x 에서는 배압으로 인한 오버헤드가 사라졌습니다.
+기존의 Observable 클래스는 배압에 관한 처리가 불필요한 경우에 초기 로딩 때문에 오버헤드가 있었는데 2.x 에서는 배압으로 인한 오버헤드가 사라졌습니다.
 
 `Observable`과 `Flowable`의 가장 큰 차이는 Buffer의 유무입니다.
 
