--- a/_posts/2019-01-11-Docker-1.md
+++ b/_posts/2019-01-11-Docker-1.md
@@ -306,7 +306,7 @@ lo        Link encap:Local Loopback
 
 ```
 
-아무 설정을 하지 않으면 기본적으로 컨테이너는 외부에서 접근할 수 업으며 도커가 설치된 호스트에서만 접근 가능합니다.
+아무 설정을 하지 않으면 기본적으로 컨테이너는 외부에서 접근할 수 없으며 도커가 설치된 호스트에서만 접근 가능합니다.
 
 외부에 컨테이너의 어플리케이션을 노출하기 위해서는 eth0의 IP와 포트를 호스트의 IP와 포트에 바인딩해야 합니다.
 
