--- a/_posts/2019-01-13-Docker-3.md
+++ b/_posts/2019-01-13-Docker-3.md
@@ -130,7 +130,7 @@ DRIVER              VOLUME NAME
 local               myvolume
 ```
 
-`tip) 볼륨 생성시 여러 플러그인을 이용하여 다양한 종류의 백엔드도 사용할 수 있습니다.`\
+`tip) 볼륨 생성시 여러 플러그인을 이용하여 다양한 종류의 백엔드도 사용할 수 있습니다.`
 
 위에서 만들어진 볼륨(=myvolume)을 이용하여 컨테이너를 생성해보겠습니다.
 
