--- a/_posts/2019-01-13-Docker-4.md
+++ b/_posts/2019-01-13-Docker-4.md
@@ -44,7 +44,7 @@ lo        Link encap:Local Loopback
         RX bytes:0 (0.0 B)  TX bytes:0 (0.0 B)
 ```
 
-컨테이너는 내부 IP를 순처작으로 할당을 하며 컨테이너가 재시작될때마다 변경될 수 있습니다.
+컨테이너는 내부 IP를 순차적으로 할당을 하며 컨테이너가 재시작될때마다 변경될 수 있습니다.
 
 만약 외부와 연결을 해야할 경우에는 호스트에 `veth(=virtual eth)`라는 네트워크 인터페이스를 생성하고 컨테이너의 `eth`와 연결이 됩니다.
 `veth 인터페이스`는 사용자가 직접 생성할 필요 없이 `도커엔진`에 의해 자동으로 생성이 됩니다.
