--- a/_posts/2019-01-13-Docker-2.md
+++ b/_posts/2019-01-13-Docker-2.md
@@ -32,7 +32,7 @@ categories:
 
 ## 실습
 
-먼저 MySQL 컨테이너부터 만들어 보도록 하겠습니다.
+먼저 `MySQL 컨테이너`부터 만들어 보도록 하겠습니다.
 
 ```
 $ docker run -d \               # -d : 컨테이너를 백그라운드에서 동작하는 어플리케이션으로 실행하도록 합니다.
