--- a/_posts/2019-01-11-Docker-1.md
+++ b/_posts/2019-01-11-Docker-1.md
@@ -276,6 +276,26 @@ $ docker rm mycentos
 $ docker rm -f centos
 ```
 
+한번에 모든 컨테이너를 삭제하려면 prune 명령어를 통해 삭제할 수 있습니다.
+
+```
+$  docker container prune
+WARNING! This will remove all stopped containers.
+Are you sure you want to continue? [y/N]
+```
+
+---
+
+*** `-q`와 `-a` 옵션
+- `-q` : 컨테이너 ID만 출력
+- `-a` : 컨테이너 전체 출력
+
+ex)
+```
+$ docker stop $(docker ps -a -q)
+$ docker rnm $(docker ps -a -q)
+```
+
 ---
 
 ### 컨테이너 외부에 노출
