--- a/_posts/2019-07-15-Activity.md
+++ b/_posts/2019-07-15-Activity.md
@@ -174,7 +174,7 @@ override fun onRestoreInstanceState(savedInstanceState: Bundle?, persistentState
     - standard : default 설정으로, 여러개의 인스턴스 생성이 가능합니다.
     - singleTop : 여러개의 인스턴스 생성이 가능하지만, 호출한 액티비티가 최상위 액티비티로 있는 경우에는 인스턴스 생성없이 기존의 액티비티로 대체됩니다.
     - singleTask : 한 번에 액티비티 인스턴스 한 개씩만 존재할 수 있습니다.
-    - singleInstance : `singTask`와 동일합니다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우에는 예외, 이것으로 시작한 액티비티는 모두 별개의 작업에서 열립니다.
+    - singleInstance : `singleTask`와 동일합니다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우에는 예외, 이것으로 시작한 액티비티는 모두 별개의 작업에서 열립니다.
 - allowTaskReparenting : true로 설정이 되면 taskAffinity에 설정되어 있는 작업이 나타나면 그쪽으로 작업이 옮겨집니다.
 - clearTaskOnLaunch  : true로 설정이 되면 사용자가 작업을 떠났다가 다시 돌아올 경우 루트 액티비티까지 스택을 지웁니다.
 - alwaysRetainTaskState : true로 설정이 되면 사용자가 오랜 시 작업을 떠나 있어도 스택에 있는 모든 액티비티를 유지합니다.
