--- a/_posts/2019-08-21-Koin.md
+++ b/_posts/2019-08-21-Koin.md
@@ -20,7 +20,7 @@ categories:
 
 `의존성`이란 예를 들어서 `A`라는 클래스가 내부에서 `B`라는 클래스를 `참조`하는 경우 `A클래스->B클래스 의존성을 갖는다`고 말할 수 있습니다.
 
-```java
+```kotlin
 class B {
     ...
 }
@@ -37,7 +37,7 @@ class A {
 
 예를 들어서 `B클래스`에 `C클래스`의 `의존성`이 생겨서 이를 `생성자`에서 넣어야 한다면 아래와 같이 바뀌어야 합니다. 
 
-```java
+```kotlin
 // 새로 추가된 클래스
 class C {
     ...
@@ -212,7 +212,7 @@ dependencies {
 
 모듈은 아래와 같이 만들 수 있습니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 import org.koin.dsl.module
@@ -227,7 +227,7 @@ val appModule = module {
 
 모듈에서 사용하는 인터페이스입니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 interface Repository {
@@ -240,7 +240,7 @@ interface Repository {
 
 아래는 인터페이스의 구현 클래스입니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 class RepositoryImpl : Repository {
@@ -256,7 +256,7 @@ class RepositoryImpl : Repository {
 아래는 위에서 만든 `Repository`를 사용하는 `Presenter` 입니다. 생성자에서 `repository`의 인스턴스가 의존성 주입이 되는데, 모듈에서의 `get()`을 통해서
 자동으로 주입이 됩니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 class MyPresenter(private val repository: Repository) {
@@ -269,7 +269,7 @@ class MyPresenter(private val repository: Repository) {
 
 이제 `startKoin()`을 실행시키기 위해 `Application Class`를 만듭니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 import android.app.Application
@@ -321,7 +321,7 @@ class MyApplication : Application() {
 
 실제 사용은 아래와 같이 `by inject()`를 통해서 바로 의존성을 주입할 수 있습니다.
 
-```java
+```kotlin
 package com.byjw.kointest
 
 import androidx.appcompat.app.AppCompatActivity
